force-app/main/standard/objects/Error_Events__e/Error_Events__e.object-meta.xml
<CustomObject>
    <description>An event that is fired whenever a Company.info element triggers an error.</description>
    <label>Error Event</label>
    <pluralLabel>Error Events</pluralLabel>
</CustomObject>