force-app/main/standard/objects/Error_Events__e/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>The cause of the error</description>
    <label>Cause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>