force-app/main/standard/objects/Error_Events__e/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if an email needs to be send out to the configured email address.</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>