force-app/main/standard/objects/Error_Events__e/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <description>The stacktrace of an exception to log</description>
    <label>Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>