force-app/main/standard/objects/Error_Events__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of the error</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>